--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,10 @@
 @tailwind utilities;
 
 
+.inputStyles{
+  @apply block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:border-blue-700 sm:text-sm sm:leading-6;
+}
+
+.button{
+  @apply flex w-full justify-center rounded-md bg-blue-500 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-blue-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600;
+}
